--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation files('libs/poi-3.7.jar')
-    implementation files('libs/poi-ooxml-schemas-3.12-20150511-a.jar')
-    implementation files('libs/jxl.jar')
+    compile 'org.apache.poi:poi-ooxml:3.11'
 }
