--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'org.apache.poi:poi-ooxml:3.11'
+    compile 'org.apache.poi:poi-ooxml:3.17'
+    compile 'stax:stax:1.2.0'
 }
